[package]
name = "iatodng"
version = "0.1.0"
edition = "2021"


[dependencies]
byteorder = "1.4.3"
chrono = "0.4.24"
clap = { version = "4.2.4", features = ["derive"] }
ndarray = { version = "0.15.6", features = ["blas", "rayon", "matrixmultiply-threading"] }
phf = { version = "0.11.1", features = ["macros"] }
rawler = { git = "https://github.com/dnglab/dnglab.git", version = "0.5.1" }
rayon = "1.7.0"
